--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,9 @@ p {
     margin: 0;
 }
 
+.btn {
+    font-size: inherit;
+}
 /* Components */
 
 .tools-section {
@@ -45,7 +48,7 @@ p {
 }
 
 .canvas-management {
-    width: 12rem;
+    width: 17rem;
     padding: 0.5rem;
     border: 2px dashed black;
 }
